--- a/assets/css/style-wicar.css
+++ b/assets/css/style-wicar.css
@@ -18,6 +18,12 @@ header{
     --color-naranjohover-wicar:#BC4D0A;
     --color-dark-section:#1C1C1C;
 }
+.bg-black{
+    background-color: #000;
+}
+.text-orange{
+    color: var(--color-naranjo-wicar);
+}
 .nav-link{
     font-size: 16px;
 }
@@ -76,7 +82,7 @@ header{
     font-weight: bold;
     text-transform: uppercase;
 }
-.titulo-wicar span:first-child{
+.section-quees .titulo-wicar span:first-child, #cuando-lo-uso .titulo-wicar span:first-child{
     margin-right:.4em;
 }
 .titulo-wicar img{
@@ -86,10 +92,10 @@ header{
     padding: 90px 0 21px;
     background-color: var(--color-dark-section);
 }
-.acceso-movil{
+.acceso-movil, .acceso-web{
     position: relative;
 }
-.acceso-movil .imagen{
+/*.acceso-movil .imagen, .acceso-web .imagen{
     position: absolute;
     bottom: 0;
     top: 0;
@@ -97,34 +103,175 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
-}
-.div-content{
+}*/
+.acceso-movil .div-content{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 257px;
 }
-.div-content .box{
+.acceso-movil .box, .acceso-web .box{
     background-color: #000;
-    margin: 8px 0;
     width: 100%;
-    padding-left: 326px;
-    padding-right: 10px;
-    padding-top: 18px;
+    padding: 18px 10px 18px 16px;
     height: 287px;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
 }
-.div-content .box h3{
+.box h3{
     font-size: 22px;
     font-weight: 700;
     color: var(--color-naranjo-wicar);
     margin-bottom: 27px;
 }
+.btn-acceso-web{
+    background-color: var(--color-naranjo-wicar);
+}
+.btn-acceso-web:hover{
+    text-decoration: none;
+    background-color: var(--color-naranjohover-wicar);
+}
+.div-telefono, .box-borde{
+    border:1px solid #fff;  
+}
+.box-borde{
+    border-radius: 11px;
+}
+ol{
+    margin: 0;
+}
+.div-telefono{
+    margin-bottom: 124px;
+}
+.div-telefono h2, .servicios-principales .titulo-servicios .text-orange, .pasos-seccion .titulo-servicios .text-orange{
+    font-size: 26px;
+    color: var(--color-naranjo-wicar);
+    font-weight: bold;
+}
+.pasos-seccion{
+    padding-bottom: 124px;
+}
+.div-telefono p, .div-telefono h2{
+    margin:0;
+}
+.div-telefono .tel{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 14px;
+}
+.div-telefono .tel span{
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+}
+.div-telefono .tel span.divisor{
+    display: block;
+    height: 18px;
+    width: 1px;
+    background-color: #fff;
+    margin: 0 1rem;
+}
+.pasos-deescarga .separador{
+    height: 100%;
+}
+.pasos-deescarga .contenido{
+    max-width: 30%;
+}
+.acordeon-holder{
+    gap: 21px;
+}
+.acordeon-item .acordeon-header a{
+    background-color: #000;
+    display: grid;
+    align-items: center;
+    grid-template-columns: 56px auto 10px;
+    padding: 18px 27px;
+    border-radius: 11px;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 15px;
+    font-weight: bold;
+    transition: color .3s ease 0s;
+}
+.acordeon-item .acordeon-header a:hover, .acordeon-item .acordeon-header a.active{
+    color: var(--color-naranjo-wicar);
+}
+.acordeon-item .acordeon-header a svg path{
+    transition: fill .3s ease 0s;
+}
+.acordeon-item .acordeon-header a:hover svg path, .acordeon-item .acordeon-header a.active svg path{
+    fill: var(--color-naranjo-wicar);
+}
+.acordeon-item .acordeon-header a:hover img, .acordeon-item .acordeon-header a.active img{
+    filter: contrast(40%) sepia(1) hue-rotate(318deg) saturate(1000%);
+}
+.titulo-acordeon{
+    font-size: 30px;
+    font-weight: bold;
+    color: var(--color-naranjo-wicar);
+    margin-bottom: 26px;
+}
+.list-check{
+    margin-top: 2rem;
+    color: #fff;
+    list-style-image: url(../img/icono-check.svg);
+}
+.list-check li{
+    margin-bottom: 2rem;
+}
+.acordeon-tab-item:not(.d-none){
+    opacity: 0;
+    animation: deslizar .5s ease-in-out forwards;
+}
+.carrusel-cuando-usar .item-carrusel{
+    padding: 19px 13px 17px;
+    border: 1px solid #fff;
+    max-width: 350px;
+}
+.carrusel-cuando-usar .item-carrusel h3{
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    color: #fff;
+}
+.carrusel-cuando-usar .item-carrusel p{
+    text-transform: uppercase;
+    font-size: 16px;
+    margin-bottom: 2rem;
+    color: #fff;
+}
+#cuando-lo-uso .owl-nav button.owl-prev span, #cuando-lo-uso .owl-nav button.owl-next span{
+    background-image: url('../img/ionic-ios-arrow-dropleft.svg');
+    display: block;
+    width: 38px;
+    height: 38px;
+  }
+  
+#cuando-lo-uso .owl-nav button.owl-prev span{
+    transform: rotate(180deg);
+}
+#cuando-lo-uso .owl-nav button.owl-prev span{
+    background-image: url('../img/ionic-ios-arrow-dropleft.svg');
+}
+  .owl-item{
+    display: flex;
+    justify-content: center;
+  }
+@keyframes deslizar {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
 @media (min-width:1200px){
-    picture:after {
+    .section-slide picture:after {
         content: '';
         display: block;
         position: absolute;
@@ -183,5 +330,44 @@ header{
     #main-slide-wicar .carousel-indicators .active{
         background-color: var(--color-naranjo-wicar);
         opacity: 1 !important;
+    }
+    .acceso-movil .box, .acceso-web .box{
+        height: auto;
+    }
+    .acceso-movil .box p , .acceso-web .box p{
+        line-height: 16px;
+    }
+    .div-telefono{
+        margin-bottom: 92px;
+    }
+    .div-telefono .tel{
+        flex-direction: column;
+    }
+    .div-telefono .tel span{
+        font-size: 18px;
+    }
+    .div-telefono .tel span.divisor{
+        display: none;
+    }
+    .div-telefono h2, .servicios-principales .titulo-servicios .text-orange, .pasos-seccion .titulo-servicios .text-orange{
+        font-size: 22px;
+    }
+    .pasos-deescarga .separador{
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
+    .pasos-deescarga .separador, .pasos-deescarga .contenido{
+        width: 100%;
+        max-width: unset;
+    }
+}
+@media (max-width:960px){
+    #ubicacion .image-ubicacion {
+        position: absolute;
+        z-index: 2;
+        bottom: -1.3rem;
+        right: 0;
+        display: inline-block !important;
+        width: auto;
     }
 }
