plantillas landings términos y faq

--- a/assets/css/style-wicar.css
+++ b/assets/css/style-wicar.css
@@ -280,6 +280,9 @@ display: flex;
 justify-content: center;
 }
 
+.terminos-condiciones {
+    background-color: #fff;
+}
 
 @keyframes deslizar {
     0% {
