--- a/assets/css/style-wicar.css
+++ b/assets/css/style-wicar.css
@@ -280,7 +280,73 @@ display: flex;
 justify-content: center;
 }
 
+.box-gris{
+    background-color: #1C1C1C;
+    color:#fff
+}
+.box-gris ol li{
+    margin-bottom: 16px;
+}
+.title--28{
+    font-size: 28px;
+    font-weight: bold;
+}
 
+.card-plan h2{
+    font-size: 18px;
+    font-weight: bold;
+}
+.card-plan h3{
+    font-size: 22px;
+    font-weight: bold;
+}
+.card-plan .precio{
+    font-size: 40px;
+    font-weight: bold;
+}
+.card-plan .precio small{
+    font-size: 14px;
+    font-weight:normal;
+}
+.card-plan .list-check{
+    color: #000;
+}
+.card-plan .list-check li {
+    margin-bottom: 1rem;
+}
+.card-plan .list-check li >  ul{
+    list-style-image: none;
+    list-style-type: disc;
+    padding: 0;
+    margin-top: 1rem;
+}
+.card-plan .list-check li >  ul li{
+    margin-bottom: 1rem;
+    color: #000;
+}
+.top-planes{
+    min-height: 108px;
+}
+footer h4{
+   font-size: 20px;
+   font-weight: bold; 
+   margin-bottom: 1rem;
+}
+footer ul{
+    margin:0;
+    padding-inline-start: 19px;
+}
+footer ul li, footer ul li a{
+    color:#fff;
+    font-size: 16px;
+    text-decoration: none;
+}
+footer ul li{
+    margin-bottom: 1rem;
+}
+footer ul li a:hover{
+    color: var(--color-naranjo-wicar);
+}
 @keyframes deslizar {
     0% {
       opacity: 0;
@@ -340,6 +406,15 @@ justify-content: center;
     .inner-column .tabla-marcas-column-secondary img{
         width: 30px;
     }
+    .card-plan{
+        border-radius: 10px;
+        min-height: 904px;
+    }
+    .card-plan .btn-acceso-web {
+        position: absolute;
+        width: 78%;
+        bottom: 0;
+    }
 }
 @media (max-width:1199.98px) {
     *{
@@ -368,10 +443,10 @@ justify-content: center;
         font-size: 28px;
     }
     .titulo-wicar span{
-        font-size: 26px;
+        font-size: 25px;
     }
     .titulo-wicar img{
-        height: 26px;
+        height: 25px;
     }
     .section-quees{
         padding: 45px 0 40px;
@@ -484,6 +559,10 @@ justify-content: center;
         width: 30px;
         margin-right: 1rem;
     }
+    .card-plan{
+        margin-bottom: 56px;
+        border-radius: 10px;
+    }
 }
 @media (max-width:960px){
     #ubicacion .image-ubicacion {
@@ -493,5 +572,13 @@ justify-content: center;
         right: 0;
         display: inline-block !important;
         width: auto;
+    }
+}
+@media (max-width: 390px){
+    .titulo-wicar span {
+        font-size: 22px;
+    }
+    .titulo-wicar img {
+        height: 22px;
     }
 }
