--- a/assets/css/style-wicar.css
+++ b/assets/css/style-wicar.css
@@ -327,7 +327,36 @@ justify-content: center;
 .top-planes{
     min-height: 108px;
 }
-
+footer h4{
+   font-size: 20px;
+   font-weight: bold; 
+   margin-bottom: 1rem;
+}
+footer ul{
+    margin:0;
+    padding-inline-start: 19px;
+}
+footer ul li, footer ul li a{
+    color:#fff;
+    font-size: 16px;
+    text-decoration: none;
+}
+footer ul li{
+    margin-bottom: 1rem;
+}
+footer ul li a:hover{
+    color: var(--color-naranjo-wicar);
+}
+@keyframes deslizar {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 
 /* Términos y condiciones */
 .terminos-condiciones {
@@ -367,6 +396,7 @@ justify-content: center;
     border-bottom: 1px solid rgba(255, 255, 255, 0.25);
 }
 .accordion-faq .accordion-button {
+    position: relative;
     background-color: inherit;
     border: none;
     color: #fff;
@@ -376,13 +406,16 @@ justify-content: center;
     font-weight: 700;
     outline: none;
     line-height: 1;
-    padding: 0;
+    padding: 0 2rem 0 0;
     text-align: left;
     text-transform: uppercase;
     width: 100%;
 }
 .accordion-faq .accordion-button::after {
     content: "＋";
+    position: absolute;
+    top: auto;
+    right: 0;
     border-radius: 50%;
     border-color:#fff;
     border-style: solid;
@@ -405,36 +438,6 @@ justify-content: center;
     margin-top: 1.5rem;
 }
 
-footer h4{
-   font-size: 20px;
-   font-weight: bold; 
-   margin-bottom: 1rem;
-}
-footer ul{
-    margin:0;
-    padding-inline-start: 19px;
-}
-footer ul li, footer ul li a{
-    color:#fff;
-    font-size: 16px;
-    text-decoration: none;
-}
-footer ul li{
-    margin-bottom: 1rem;
-}
-footer ul li a:hover{
-    color: var(--color-naranjo-wicar);
-}
-@keyframes deslizar {
-    0% {
-      opacity: 0;
-      transform: translateY(20px);
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
 @media (min-width:1200px){
     .section-slide picture:after {
         content: '';
